[SWU-85] Fixed spacing in navigation

--- a/swinburne-aem-prototype/source/v2/scss/layout/_header.scss
+++ b/swinburne-aem-prototype/source/v2/scss/layout/_header.scss
@@ -81,13 +81,13 @@
 
     @include media-breakpoint-between(md, md) {
       &::after {
-        content: " ";
+        background-color: rgba(255, 255, 255, .5);
+        content: ' ';
         display: block;
-        position: fixed;
-        background-color: rgba(255, 255, 255, 0.5);
-        top: $header-height-md;
-        right: 0;
         height: calc(100vh - 60px);
+        position: fixed;
+        right: 0;
+        top: $header-height-md;
         width: calc(100vw - 320px);
       }
     }
@@ -123,6 +123,7 @@
   }
   &__admin {
     background-color: color('charcoal');
+    font-size: 11px;
     height: $header-height / 3;
     padding: 0 $spacing-md;
     @include media-breakpoint-down(md) {
@@ -169,9 +170,13 @@
         .text {
           color: color('grey-1');
           display: block;
-          font-size: 12px;
           font-weight: 200;
           padding-top: $spacing-md;
+        }
+      }
+      @include media-breakpoint-between(md, md) {
+        .link {
+          padding: ($spacing-md + 2px) 0;
         }
       }
     }
@@ -235,7 +240,7 @@
       color: color('charcoal');
       height: (($header-height / 3) * 2) - 2px;
       margin-right: $spacing-md;
-      padding-top: 22px;
+      padding-top: $spacing-md + 2px;
       &::after {
         display: none;
       }
@@ -260,6 +265,9 @@
       @include media-breakpoint-down(md) {
         height: 100%;
         padding: $spacing-sm 0;
+      }
+      @include media-breakpoint-between(md, md) {
+        padding: ($spacing-md + 2px) 0;
       }
     }
     .nav-item {
@@ -289,8 +297,8 @@
           background-color: color('charcoal');
           box-shadow: none;
           height: calc(100vh - 47px);
-          left: 5px !important;
-          margin-top: -5px;
+          left: $spacing-2xs !important;
+          margin-top: -$spacing-2xs;
           overflow: auto;
           padding-right: 0;
           position: absolute;
@@ -319,7 +327,7 @@
             display: inline-flex;
             height: $header-level2-height;
             margin-right: $spacing-md;
-            padding-top: 16px;
+            padding-top: $spacing-sm + 1px;
             transition: border-bottom .3s ease-in-out, color .3s ease-in-out;
             vertical-align: top;
             &[aria-expanded='true'],
@@ -373,9 +381,10 @@
           transform: translateY(-50%);
         }
       }
-      a.l-2,
+      .nav-item .dropdown-menu a.l-2,
       .nav-item {
         display: block;
+        height: $header-height-sm;
         min-height: $header-height-sm;
         &:focus {
           &,
@@ -385,6 +394,16 @@
         }
       }
     }
+    @include media-breakpoint-between(md, md) {
+      .nav-item .dropdown-menu a.l-2,
+      .nav-item {
+        height: $header-height-md;
+        min-height: $header-height-md;
+      }
+      .nav-item .dropdown-menu a.l-2 {
+        padding: ($spacing-md + 2px) 0;
+      }
+    }
   }
   &__actions {
     align-items: center;
@@ -392,13 +411,13 @@
     max-width: 200px;
     @include media-breakpoint-down(md) {
       height: auto;
-      margin-top: 4px;
+      margin-top: $spacing-2xs - 1px;
       position: fixed;
       right: 0;
       top: 0;
     }
-    @include media-breakpoint-between(md, md){
-      margin-top: 8px;
+    @include media-breakpoint-between(md, md) {
+      margin-top: $spacing-xs - 2px;
     }
     a {
       &.btn {
@@ -412,7 +431,7 @@
           display: none;
         }
         @include media-breakpoint-down(md) {
-          margin: 0 7px 0 0;
+          margin: 0 ($spacing-2xs + 2px) 0 0;
           min-width: 101px;
           &:first-of-type {
             display: none;
@@ -441,7 +460,7 @@
         font-size: 14px;
         font-weight: 300;
         margin-right: 0;
-        padding-left: 5px;
+        padding-left: $spacing-2xs;
       }
       .link-text {
         display: none;
